[project]
name = "business-use"
version = "0.1.0"
description = "Lightweight Python SDK for Business-Use event tracking and assertions"
readme = "README.md"
authors = [
    { name = "Desplega AI", email = "contact@desplega.ai" }
]
maintainers = [
    { name = "Desplega AI", email = "contact@desplega.ai" }
]
requires-python = ">=3.11"
license = { text = "MIT" }
keywords = ["workflow", "automation", "testing", "event-driven", "observability"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
]

[project.urls]
Homepage = "https://github.com/desplega-ai/business-use"
Documentation = "https://github.com/desplega-ai/business-use#readme"
Repository = "https://github.com/desplega-ai/business-use"
Issues = "https://github.com/desplega-ai/business-use/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]
